Bug 455937 - Lyrics no longer available from lyricwiki
Summary: Lyrics no longer available from lyricwiki
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Lyrics (other bugs)
Version First Reported In: kf5
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2022-06-26 01:29 UTC by John Horne
Modified: 2024-04-15 08:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Horne 2022-06-26 01:29:31 UTC
SUMMARY
I added some mp3 files to my collection, and noticed that the lyrics tab always showed a "Lyrics: Fetch error" message. It seems that the lyrics are obtained from lyricwiki/fandom web site. That site has now closed for good though.
Some other site needs to be used, although I don't know how to configure this in Amarok. (I am thinking of sites such as www.lyrics.com or (since I'm in the UK) lyrics.doheth.co.uk).


STEPS TO REPRODUCE
1. Add a new mp3 file to collection (not necessarily a recent song)
2. configure Amarok to show the lyrics
3. Play the song

OBSERVED RESULT
The above error is shown - no lyrics.

EXPECTED RESULT
Where possible, lyrics should be shown.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: (Fedora 36)
(available in About System)
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.3 (Qt6 - 6.3.0)

ADDITIONAL INFORMATION
The current version of Amarok still shows under 'Settings' specific settings for LyricWiki, as well as the lyricwiki script which seems to be enabled by default. These too need to be removed or replaced.
Comment 1 Myriam Schweingruber 2022-06-26 09:01:29 UTC
This needs to be changed in the code, but shouldn't be hard to do.
Comment 2 Vlad Rakhmanin 2022-09-09 10:18:33 UTC
(In reply to Myriam Schweingruber from comment #1)
> This needs to be changed in the code, but shouldn't be hard to do.

I would be happy to have a look at this one if it's not already taken?
Comment 3 Heiko Becker 2022-09-09 20:41:46 UTC
> I would be happy to have a look at this one if it's not already taken?

No, feel free to work on it.
Comment 4 Bug Janitor Service 2024-04-13 10:42:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/85
Comment 5 Tuomas Nurmi 2024-04-15 08:23:59 UTC
Git commit 449918a39e4a64a3a64f47b5503d48c7b01e1d26 by Tuomas Nurmi.
Committed on 15/04/2024 at 08:20.
Pushed by nurmi into branch 'master'.

Change lyrics provider to lyrics.ovh

Seems like a good option for now, and was an easy conversion. Some backend/system
shared among different music players might be more feasible long-term solution.

M  +1    -1    ChangeLog
M  +13   -36   src/lyrics/LyricsManager.cpp

https://invent.kde.org/multimedia/amarok/-/commit/449918a39e4a64a3a64f47b5503d48c7b01e1d26