Change lyrics provider to lyrics.ovh

Seems like a good option for now, and was an easy conversion. Some backend/system
shared among different music players might be more feasible long-term solution.

BUG: 455937